r277 (28. 11. 2024):
Fixed a silent load crash in custom heists added by Beardlib

r276 (24. 11. 2024):
Added options "Show Number of Enemies in Assault Trackers", "Floating Health Bar Style" and "Show Floating Health Bars for Team AI"

r275 (17. 11. 2024):
Optimization in option "Show Convert's Health in Tracker"
Fixed missing decimals in uses for ammo bags
Captain Chance Tracker: Made the tracker accurate in Crime Spree with Assault Extender modifier active
Heat Street: Fixed stuck failed achievement tracker "Patience is Key"
The Bomb: Dockyard: Fixed an issue where delay to the first assault is not visible after alarm

r274 (16. 11. 2024):
Hostile Takeover: Fixed a crash in achievement tracker "Texas Treasures, Part 3"

r273 (10. 11. 2024):
Added option "Show Convert's Health in Tracker"
Fixed Turret icon
Fixed a case where Pager Counter Tracker could be inaccurate in Crime Spree (client only)
Captain Spawn Chance Tracker: Enabled for clients; requires EHI Host to function

r272 (07. 11. 2024):
Updated pager icon
Fixed bag icon in achievements in Crime Spree
Crime Spree: Added tracker for civilian kills that will raise an alarm
Crime Spree: Added buffs for Gage Boosts
Escape Chance Tracker: Disabled in Crime Spree

r271 (03. 11. 2024):
Buffs: Reduced memory consumption by removing unused panel
Trackers: Animation optimization when background is disabled
Cook Off / Rats Day 1: Fixed sniper tracker blinking continuously red

r270 (01. 11. 2024):
Reorganized code in waypoints to allow changing time

r269 (29. 10. 2024):
Assault Tracker: Host will sync current assault data to clients after endless assault has ended
Armor Buff: Fixed an issue where the buff does not update properly after passive armor regen
Hotline Miami Day 1: Fixed an issue in Loot Counter where random maximum count could get stuck

r268 (25. 10. 2024):
Fixed misaligned trackers

r267 (24. 10. 2024):