@@ -1,3 +1,6 @@
+r278 (29. 11. 2024):
+Disabled Beardlib fix on vanilla levels to prevent crashes
+
 r277 (28. 11. 2024):
 Fixed a silent load crash in custom heists added by Beardlib
 
